vest-dsl/test/bad/struct_duplicate_fields3.vest
fmt = {
  const f1: u8 = 10,
  const f1: u8 = 20,
}
